Fix an issue of starting scaled on small screens

--- a/style.css
+++ b/style.css
@@ -353,16 +353,14 @@ a {
 
 /*Resposiveness magic*/
 @media (max-width: 1000px) {
-    .content {
-        min-width: 375px;
-    }
     .header {
-        padding: 10px 30px 30px 30px;
+        padding: 1rem 5vw;
     }
     .header-1 {
         flex-direction: column;
         align-items: center;
-        gap: 30px;
+        gap: 70px;
+        margin-top: 0;
     }
     .header-2 {
         margin-top: 50px;
